# notion-easymemo

./: LICENSE  README.md  pyproject.toml
src/notion_easymemo/: __init__.py
