[project]
name = "notion-easymemo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "akim-muto", email = "work.muto.akim.work@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
